fix cmakelists.txt with note for apple x86 cross compile

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ set(CMAKE_CXX_STANDARD 11)
 if (APPLE)
     set(CMAKE_OSX_ARCHITECTURES "x86_64" CACHE INTERNAL "" FORCE)
     message("CMAKE_OSX_ARCHITECTURES is " ${CMAKE_OSX_ARCHITECTURES})
+    message("If you are on Apple Silicon, be sure to install x86 GLEW and glfw libraries through brew.")
 endif()
 
 # Add GLM submodule things?
@@ -17,12 +18,17 @@ include_directories(
 )
 
 # Add opengl things
+find_package(OpenGL REQUIRED)
+include_directories(${OPENGL_INCLUDE_DIRS})
+message("Including OpenGL from " ${OPENGL_INCLUDE_DIRS})
+
+# Add glew things
 find_package(GLEW REQUIRED)
 include_directories(${GLEW_INCLUDE_DIRS})
 message("Including GLEW from " ${GLEW_INCLUDE_DIRS})
-# link_libraries(${GLEW_LIBRARIES})
-# message("Linking GLEW from " ${GLEW_LIBRARIES})
 
+# Add glfw, this doesn't actually define things
+# Just place 'glfw' in the target
 find_package(glfw3 REQUIRED)
 
 # Add our includes
@@ -40,7 +46,7 @@ add_executable(
     src/Window.cpp
 )
 target_link_libraries(
-    example PUBLIC GLEW::GLEW
+    example PUBLIC GLEW::GLEW OpenGL::GL glfw
 )
 
 
